--- a/filters-frontend/package.json
+++ b/filters-frontend/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^18.3.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.21"
+    "@mui/material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.9.0",
+    "date-fns": "^2.29.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
