--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>org.backend</groupId>
-    <artifactId>data-filtering</artifactId>
+    <artifactId>filters-askend</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -56,11 +56,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
-<!--        <dependency>
-            <groupId>jakarta.validation</groupId>
-            <artifactId>jakarta.validation-api</artifactId>
-        </dependency>-->
     </dependencies>
 
 </project>
